-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
QE 2021-11-15, QE 2021-11-29
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Dereference before null check
There may be a null pointer dereference, or else the comparison against null is unnecessary. All paths that lead to this null pointer comparison already dereference the pointer earlier
/src/mongo/db/query/sbe_runtime_planner.cpp:123: REVERSE_INULL 121112 Null-checking "candidate" suggests that it may be null, but it has already been dereferenced on all paths leading to the check.