SERVER-61271 Correct return value from executeCandidateTrial